# turtlebot_ws

src/: .gitignore
src/mechabot_bringup/: CMakeLists.txt  package.xml
src/mechabot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/mechabot_controller/: CMakeLists.txt  package.xml
src/mechabot_controller/config/: mechabot_controllers.yaml  twist_mux_topics.yaml
src/mechabot_controller/launch/: controller.launch.py  joystick.launch.py
src/mechabot_firmware/: CMakeLists.txt  package.xml
src/mechabot_firmware/launch/: hardware_interface.launch.py
src/mechabot_localization/: CMakeLists.txt  package.xml
src/mechabot_localization/config/: amcl.yaml
src/mechabot_localization/rviz/: global_localization.rviz
src/mechabot_mapping/: CMakeLists.txt  package.xml
src/mechabot_mapping/config/: slam_toolbox.yaml
src/mechabot_mapping/launch/: slam.launch.py
src/mechabot_navigation/: CMakeLists.txt  package.xml
src/mechabot_navigation/config/: behavior_server.yaml  controller_server.yaml  planner_server.yaml
src/mechabot_navigation/launch/: navigation.launch.py
src/mechabot_navigation/mechabot_navigation/: waypoint_following.py
src/mechabot_scripts/: package.xml  setup.py
src/mechabot_scripts/mechabot_scripts/: auto_docking_undocking.py  docking_with_patrolling.py  maze_solver.py  object_avoidance.py  read_lidar.py  wall_follower.py
src/turtlebot_description/: CMakeLists.txt  package.xml
src/turtlebot_description/launch/: display.launch.py  gazebo.launch.py
src/turtlebot_description/meshes/: Camera.stl  MPU6050.stl  Wheel.stl  (+1 more)
(+26 files in other folders)
